Use toList() where possible
GitOrigin-RevId: a6f99ebf25bbace03fdf868672457efb9d13267e